; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_object.c_test_set_many_keys.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_object.c_test_set_many_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"abcdefghijklmnopqrstuvwxyz\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"unable to create object\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"unable to create string\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"unable to set object key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_set_many_keys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_set_many_keys() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca [2 x i8], align 1
  %5 = alloca i64, align 8
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %6 = call i32* (...) @json_object()
  store i32* %6, i32** %1, align 8
  %7 = load i32*, i32** %1, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = call i32 @fail(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %0
  %12 = call i32* @json_string(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  store i32* %12, i32** %2, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %11
  %16 = call i32 @fail(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %11
  %18 = getelementptr inbounds [2 x i8], [2 x i8]* %4, i64 0, i64 1
  store i8 0, i8* %18, align 1
  store i64 0, i64* %5, align 8
  br label %19

19:                                               ; preds = %38, %17
  %20 = load i64, i64* %5, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i64 @strlen(i8* %21)
  %23 = icmp ult i64 %20, %22
  br i1 %23, label %24, label %41

24:                                               ; preds = %19
  %25 = load i8*, i8** %3, align 8
  %26 = load i64, i64* %5, align 8
  %27 = getelementptr inbounds i8, i8* %25, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = getelementptr inbounds [2 x i8], [2 x i8]* %4, i64 0, i64 0
  store i8 %28, i8* %29, align 1
  %30 = load i32*, i32** %1, align 8
  %31 = getelementptr inbounds [2 x i8], [2 x i8]* %4, i64 0, i64 0
  %32 = load i32*, i32** %2, align 8
  %33 = call i64 @json_object_set(i32* %30, i8* %31, i32* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %24
  %36 = call i32 @fail(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0))
  br label %37

37:                                               ; preds = %35, %24
  br label %38

38:                                               ; preds = %37
  %39 = load i64, i64* %5, align 8
  %40 = add i64 %39, 1
  store i64 %40, i64* %5, align 8
  br label %19

41:                                               ; preds = %19
  %42 = load i32*, i32** %1, align 8
  %43 = call i32 @json_decref(i32* %42)
  %44 = load i32*, i32** %2, align 8
  %45 = call i32 @json_decref(i32* %44)
  ret void
}

declare dso_local i32* @json_object(...) #1

declare dso_local i32 @fail(i8*) #1

declare dso_local i32* @json_string(i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @json_object_set(i32*, i8*, i32*) #1

declare dso_local i32 @json_decref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
